<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/acivitybg">

    <android.support.v7.widget.Toolbar
        android:id="@+id/myToolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="#cf2323">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@mipmap/ic_launcher_round"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"/>


    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chooseServer"
        android:textColor="#2b4079"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_below="@id/myToolbar"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/s1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btnbg"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/s1"
        android:gravity="center"
        android:clickable="true"
        android:layout_below="@id/txtWelcome"
        android:textColor="#2b4079"
        android:textSize="22sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/s2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btnbg"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/s2"
        android:gravity="center"
        android:clickable="true"
        android:layout_below="@id/s1"
        android:textColor="#2b4079"
        android:textSize="22sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/s3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btnbg"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/s3"
        android:gravity="center"
        android:clickable="true"
        android:layout_below="@id/s2"
        android:textColor="#2b4079"
        android:textSize="22sp"
        android:textStyle="bold"/>


    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/admobBanner">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>