<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/acivitybg">

    <android.support.v7.widget.Toolbar
        android:id="@+id/myToolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="#dc2424">
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@mipmap/ic_launcher_round"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"/>


    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/img"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/txtWelcome"/>
    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro"
        android:textColor="#2b4079"
        android:textSize="20sp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_below="@id/myToolbar"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/img"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/next"
        android:textSize="16sp"
        android:textColor="#000"
        android:background="@drawable/btnbg"/>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/admobBanner">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>